내소개 내용 추가

--- a/index.html
+++ b/index.html
@@ -19,20 +19,23 @@
             </button>
         </div>
         <h1 class="header__title">flowerbread</h1>
-        <div class="header__image"> </div>
+        <div class="header__image">
+            <div></div>
+        </div>
     </header>
     <div class-="contents--container" role="main">
         <article class="article_intro">
-            <h2>나</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
-                Ut eget metus ut nibh vulputate aliquet et nec lacus. Pellentesque nec faucibus est. <br>
-                Proin aliquet lorem quam, nec finibus lorem fringilla ac. Praesent ultrices semper finibus. <br>
-                Phasellus lobortis suscipit erat, id dictum nibh efficitur in. Mauris sed rutrum dui, ut placerat lacus. 
+            <h2>나.</h2>
+            <p>
+                안녕하세요. 장지은입니다. <br>
+                저의 포트폴리오 홈페이지에 방문해 주셔서 감사합니다. <br>
+                UI 디자인, 프론트엔드 개발, 그리고 아이 둘의 엄마의 길을 밟아오고,<br>
+                이제 퍼블리셔로 새로운 길을 개척하고 있습니다. <br>
+                항상 도전을 좋아하는 저의 발자취를 같이 한번 보실까요?
             </p>
-            <p>Curabitur ut erat imperdiet, pellentesque felis sit amet, sagittis felis. <br>
-                Curabitur non purus ex. Suspendisse maximus sit amet orci id venenatis. Maecenas pretium felis nec sollicitudin eleifend. <br>
-                Mauris sodales tellus at gravida consequat. Morbi placerat fringilla finibus. Aliquam dignissim enim ut justo gravida, vitae finibus lacus pulvinar.
-            </p>
+        </article>
+        <article class="history">
+            
         </article>
         <article class="article_work">
             <ul>
@@ -83,7 +86,9 @@
                 </li>
             </ul>
         </article>
+ 
     </div>
+    
     <footer>
         <address>
             <a href="">nadajieun@gmail.com</a>
